# kobold

crates/kobold/js/: util.js
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs  state.rs
examples/invoice/: styles.css
examples/invoice/src/: csv.rs  main.rs  state.rs
examples/invoice/src/components/: Editor.rs
examples/npm_lib/: Cargo.toml  esbuild.js  koboldNpmLib.js  package.json
examples/npm_lib/js/: Cargo.toml
examples/npm_lib/js/src/modules/: browser_js.rs
examples/npm_lib/js/src/modules/interfaces/: browser_js_spec_macros.rs
examples/npm_lib/src/: main.rs
examples/npm_lib/src/js/: browser_js.rs
examples/npm_lib/tests/: wasm.rs
